# detect-secrets-fork

./: .dockerignore  CONTRIBUTING.md  Dockerfile  README_FORK.md  demo.py  pyproject.toml  setup.py
.github/: secret_scanning.yml
.github/workflows/: Dockerfile.ci-arm64  ci.yml  test.yml
detect_secrets/filters/: confidence_filter.py
detect_secrets/plugins/: anthropic.py  artifactory.py  aws.py  aws_bedrock.py  aws_validator.py  azure_storage_key.py  basic_auth.py  calibrate.py  ci_secrets.py  cloudant.py  cloudflare.py  confidence.py  connection_string.py  databricks.py  discord.py  docker_secrets.py  env_file.py  ethereum.py  firebase.py  github_token.py  gitlab_pat.py  gitlab_token.py  hashicorp_vault.py  high_entropy_strings.py  huggingface.py  ibm_cloud_iam.py  ibm_cos_hmac.py  ip_public.py  jwt.py  keyword.py  kubernetes.py  mailchimp.py  multi_provider.py  notion.py  npm.py  openai.py  package_registry.py  private_key.py  pypi_token.py  sendgrid.py  (+10 more)
detect_secrets/util/: allowlist.py  baseline_migrate.py  baseline_stamp.py  git_history.py  rotation_check.py  sarif_output.py  scan_stats.py
testing/: test_real_world_scan.py
testing/fixtures/real_world/: .env  README.md  ci_workflow.yml  config.py  credentials.txt  deploy.tf  deploy_key.pem  docker-compose.yml  false_positives_only.txt  id_ed25519  k8s_secrets.yaml  settings.json
tests/: conftest.py
tests/filters/: confidence_filter_test.py  test_confidence_filter.py
tests/plugins/: ci_secrets_test.py  env_file_test.py  multi_provider_test.py  package_registry_test.py  test_confidence.py  test_new_detectors.py
tests/util/: allowlist_test.py  baseline_migrate_test.py  rotation_check_test.py  scan_stats_test.py  test_utilities.py
